Fix whitespace on tooltip

--- a/cloudapp/src/app/components/activationinput/activationinput.component.scss
+++ b/cloudapp/src/app/components/activationinput/activationinput.component.scss
@@ -49,6 +49,7 @@
     border: 1px solid #343a40;
     left: 0;
     top: 20px;
+    white-space: pre-line;
 
     /* Position the tooltip */
     position: absolute;
